Labs/03 Security/03 authorization with JWT/productpage-authn-jwt.yaml
apiVersion: authentication.istio.io/v1alpha1
kind: RequestAuthentication
metadata:
  name: productpage-authn
spec:
  targets:
  - name: productpage
  peers:
  - mtls: {}
  origins:
  - jwt:
      issuer: "testing@secure.istio.io"
      jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.7/security/tools/jwt/samples/jwks.json"
  principalBinding: USE_ORIGIN
