Labs/03 Security/03 authorization with JWT/01_productpage-auth-jwt.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: default
spec:
  selector:
    matchLabels:
      app: productpage
  action: ALLOW
  rules:
  - from:
    - source:
       requestPrincipals: ["testing@secure.istio.io/testing@secure.istio.io"]
