Labs/03 Security/03 authorization with JWT/02_productpage-authz-deny-all.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: default
spec:
  selector:
    matchLabels:
      app: productpage
  action: DENY
  rules:
  - from:
    - source:
       requestPrincipals: ["testing@secure.istio.io/testing@secure.istio.io"]
