Labs/03 Security/03 authorization with JWT/04_productpage-authz-allow-claim.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-claim
  namespace: default
spec:  
  selector:
    matchLabels:
      app: productpage
  rules:
  - to:
    - operation:
        methods: ["GET"]
    when:
    - key: request.auth.claims[foo]
      values: ["bar"]
