Labs/03 Security/03 authorization with JWT/04_productpage-authz-allow-subject.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-subject
  namespace: default
spec:  
  selector:
    matchLabels:
      app: productpage
  rules:
  - to:
    - operation:
        methods: ["GET"]
    when:
    - key: request.auth.claims[sub]
      values: ["james@secure.istio.io"]
